# erp-django-api

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  conftest.py  pyproject.toml
accounts/: auth.py  exceptions.py  models.py  serializers.py  urls.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/tests/: test_auth.py  test_models.py  test_serializer.py  test_views.py
accounts/views/: base.py  signin.py  signup.py  user.py
companies/: models.py
companies/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
core/: asgi.py  exceptions.py  pagination.py  settings.py  urls.py  utils.py
core/abstracts/: models.py
core/settings/: base.py  dev.py  prod.py
core/tests/: factories.py
core/utils/: exceptions.py
scripts/: commands.sh
